--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,9 @@
-GnuPGInterface==0.3.2
-Mako==0.5.0
-MarkupSafe==0.15
-adium-theme-ubuntu==0.3.2
+Flask==0.10.1
+Flask-Login==0.2.11
+Jinja2==2.7.3
+MarkupSafe==0.23
+SQLAlchemy==0.9.8
+Werkzeug==0.9.6
 argparse==1.2.1
-chardet==2.0.1
-defer==1.0.2
-dirspec==3.0.0
-pycups==1.9.61
-pycurl==7.19.0
-pysmbc==1.0.13
-python-apt==0.8.3ubuntu7.2
-python-debian==0.1.21ubuntu1
-pyxdg==0.19
-rhythmbox-ubuntuone==4.2.0
-system-service==0.1.6
-unattended-upgrades==0.1
-unity-lens-video==0.3.5
-unity-scope-video-remote==0.3.5
-virtualenv==1.11.6
+itsdangerous==0.24
 wsgiref==0.1.2
